v1.0.0/modules/schema/pages/class/VendorShift.adoc
= `VendorShift`
:toclevels: 4


+++The operating shift for a vendor during which the vendor may transact against the merchant's account. It aggregates transactions and receipts during the shift and periodically debits a merchant account. The totals in vendor shift should always be the sum of totals aggregated in all cashier shifts that were open under the particular vendor shift.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:VendorShift`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Shift.adoc[`Shift`]
*** *`VendorShift`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
VendorShift {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}





Receipt {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Transaction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



MerchantAccount {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Vendor {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DateTimeInterval {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}













DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





VendorShift -> Receipt: Receipts


VendorShift -> Transaction: Transactions


VendorShift -> MerchantAccount: MerchantAccount


VendorShift -> Vendor: Vendor


VendorShift -> DateTimeInterval: activityInterval







VendorShift -> DiagramObject: DiagramObjects


VendorShift -> InstanceSet: InstanceSet


VendorShift -> Name: Names


VendorShift -> ChangeSetMember: PropertiesCIMDataObject


VendorShift -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<MerchantAccount,`MerchantAccount`>>
| 0..1
| xref::class/MerchantAccount.adoc[`MerchantAccount`]
| +++Merchant account this vendor shift periodically debits (based on aggregated transactions).+++

| <<Vendor,`Vendor`>>
| 0..1
| xref::class/Vendor.adoc[`Vendor`]
| +++Vendor that opens and owns this vendor shift.+++

| <<merchantDebitAmount,`merchantDebitAmount`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++The amount that is to be debited from the merchant account for this vendor shift. This amount reflects the sum(PaymentTransaction.transactionAmount).+++

| <<posted,`posted`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++If true, merchantDebitAmount has been debited from MerchantAccount; typically happens at the end of VendorShift when it closes.+++

| <<Receipts,`Receipts`>>
| 0..*
| xref::class/Receipt.adoc[`Receipt`]
| +++All receipts recorded during this vendor shift.+++

| <<Transactions,`Transactions`>>
| 0..*
| xref::class/Transaction.adoc[`Transaction`]
| +++All transactions recorded during this vendor shift.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<activityInterval,`activityInterval`>>
| 0..1
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]
| +++Interval for activity of this shift.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<receiptsGrandTotalBankable,`receiptsGrandTotalBankable`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Total of amounts receipted during this shift that can be manually banked (cash and cheques for example). Values are obtained from Receipt attributes:
=sum(Receipt.receiptAmount) for all Receipt.bankable = true.+++

| <<receiptsGrandTotalNonBankable,`receiptsGrandTotalNonBankable`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Total of amounts receipted during this shift that cannot be manually banked (card payments for example). Values are obtained from Receipt attributes:
=sum(Receipt.receiptAmount) for all Receipt.bankable = false.+++

| <<receiptsGrandTotalRounding,`receiptsGrandTotalRounding`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Cumulative amount in error due to process rounding not reflected in receiptsGrandTotal. Values are obtained from Receipt attributes:
=sum(Receipt.receiptRounding).+++

| <<transactionsGrandTotal,`transactionsGrandTotal`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Cumulative total of transacted amounts during this shift. Values are obtained from transaction:
=sum('Transaction.transactionAmount'). It also has to be reconciled against transaction summary:
=sum('TransactionSummary.transactionsTotal').+++

| <<transactionsGrandTotalRounding,`transactionsGrandTotalRounding`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Cumulative amount in error due to process rounding not reflected in transactionsGandTotal. Values are obtained from Transaction attributes:
=sum(Transaction.transactionRounding).+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#activityInterval]
=== `activityInterval`
+++Interval for activity of this shift.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.activityInterval`
| Cardinality
| 0..1
| Type
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]

| Inherited from
| xref::class/Shift.adoc[`Shift`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#MerchantAccount]
=== `MerchantAccount`
+++Merchant account this vendor shift periodically debits (based on aggregated transactions).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:VendorShift.MerchantAccount`
| Cardinality
| 0..1
| Type
| xref::class/MerchantAccount.adoc[`MerchantAccount`]


|===

//[discrete]
[#merchantDebitAmount]
=== `merchantDebitAmount`
+++The amount that is to be debited from the merchant account for this vendor shift. This amount reflects the sum(PaymentTransaction.transactionAmount).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:VendorShift.merchantDebitAmount`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#posted]
=== `posted`
+++If true, merchantDebitAmount has been debited from MerchantAccount; typically happens at the end of VendorShift when it closes.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:VendorShift.posted`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Receipts]
=== `Receipts`
+++All receipts recorded during this vendor shift.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:VendorShift.Receipts`
| Cardinality
| 0..*
| Type
| xref::class/Receipt.adoc[`Receipt`]


|===

//[discrete]
[#receiptsGrandTotalBankable]
=== `receiptsGrandTotalBankable`
+++Total of amounts receipted during this shift that can be manually banked (cash and cheques for example). Values are obtained from Receipt attributes:
=sum(Receipt.receiptAmount) for all Receipt.bankable = true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.receiptsGrandTotalBankable`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/Shift.adoc[`Shift`]


|===

//[discrete]
[#receiptsGrandTotalNonBankable]
=== `receiptsGrandTotalNonBankable`
+++Total of amounts receipted during this shift that cannot be manually banked (card payments for example). Values are obtained from Receipt attributes:
=sum(Receipt.receiptAmount) for all Receipt.bankable = false.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.receiptsGrandTotalNonBankable`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/Shift.adoc[`Shift`]


|===

//[discrete]
[#receiptsGrandTotalRounding]
=== `receiptsGrandTotalRounding`
+++Cumulative amount in error due to process rounding not reflected in receiptsGrandTotal. Values are obtained from Receipt attributes:
=sum(Receipt.receiptRounding).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.receiptsGrandTotalRounding`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/Shift.adoc[`Shift`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Transactions]
=== `Transactions`
+++All transactions recorded during this vendor shift.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:VendorShift.Transactions`
| Cardinality
| 0..*
| Type
| xref::class/Transaction.adoc[`Transaction`]


|===

//[discrete]
[#transactionsGrandTotal]
=== `transactionsGrandTotal`
+++Cumulative total of transacted amounts during this shift. Values are obtained from transaction:
=sum('Transaction.transactionAmount'). It also has to be reconciled against transaction summary:
=sum('TransactionSummary.transactionsTotal').+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.transactionsGrandTotal`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/Shift.adoc[`Shift`]


|===

//[discrete]
[#transactionsGrandTotalRounding]
=== `transactionsGrandTotalRounding`
+++Cumulative amount in error due to process rounding not reflected in transactionsGandTotal. Values are obtained from Transaction attributes:
=sum(Transaction.transactionRounding).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.transactionsGrandTotalRounding`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/Shift.adoc[`Shift`]


|===

//[discrete]
[#Vendor]
=== `Vendor`
+++Vendor that opens and owns this vendor shift.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:VendorShift.Vendor`
| Cardinality
| 0..1
| Type
| xref::class/Vendor.adoc[`Vendor`]


|===


